@@ -20,6 +20,8 @@ unity (7.4.0+16.04.20160526.1-0ubuntu2) UNRELEASED; urgency=medium
     user (LP: #1593696)
   * Add missing header to fix compilation error with -Duse_pch=OFF.
   * Filter out fullscreen window in show desktop mode. (LP: #1597706)
+  * Make sure file manager icon is not removed when unpinned. (LP:
+    #1578792)
 
   [ Alberto Milone ]
   * UnitySettings: Add dconf keys for disabling multitouch gestures (LP:
